# speckled

./: .gitignore  README.md  pyproject.toml
speckled/: config.py  main.py
